# SagaMind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  app_demo.py  architecture_exp.md  docker-compose.yml  improve.md  pyproject.toml  requirements.txt  research_paper.md  specifications.md  system_architecture.md
.github/: dependabot.yml
.github/workflows/: ci.yml
ABOUT/: ABOUT.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
migrations/: 001_init.sql
native/sagamind_native/: Cargo.toml  pyproject.toml
native/sagamind_native/src/: lib.rs
proto/: sagamind.proto
scripts/: gen_proto.sh
sdk/: __init__.py  client.py  mcp_server.py
src/: __init__.py  config.py  grpc_server.py  logging_config.py  main.py  models.py  security.py
src/memory/: __init__.py  consolidation.py  decay.py  embedding.py  neo4j_store.py  timescale_store.py
src/observability/: __init__.py  metrics.py
src/orchestrator/: __init__.py  coordinator.py  sandbox.py  state_store.py  temporal_worker.py
src/speculative/: __init__.py  orchestrator.py
src/verifier/: __init__.py  z3_prover.py
tests/: conftest.py  test_api.py  test_config.py  test_consolidation.py  test_coordinator.py  test_decay.py  test_decay_tz.py  test_embedding.py  test_health_auth.py  test_metrics.py  test_models.py  test_property_based.py  test_recovery.py  test_sandbox.py  test_security.py  test_speculative.py  test_state_store.py  test_timescale_store.py  test_z3_prover.py
tests/integration/: conftest.py  test_stores_integration.py
