[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagamind"
version = "1.0.0"
description = "Transaction-safe multi-agent runtime and cognitive memory co-processor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SagaMind Contributors"},
]
keywords = [
    "multi-agent",
    "transaction",
    "saga",
    "memory",
    "z3",
    "formal-verification",
    "cognitive-architecture",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "z3-solver>=4.12.0",
    "numpy>=1.23.0",
    "psycopg2-binary>=2.9.6",
    "pgvector>=0.2.0",
    "neo4j>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.5.0",
]
dashboard = [
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
]
wasm = [
    "wasmtime>=12.0.0",
]
grpc = [
    "grpcio>=1.54.0",
    "grpcio-tools>=1.54.0",
    "protobuf>=4.21.0",
]
llm = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sagamind/sagamind"
Documentation = "https://sagamind.readthedocs.io"
Repository = "https://github.com/sagamind/sagamind"
Issues = "https://github.com/sagamind/sagamind/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/grpc_server.py", "src/generated/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Optional/native dependencies that may be absent in a given environment (the code
# imports them defensively and degrades gracefully). Don't fail type-checking on them.
[[tool.mypy.overrides]]
module = [
    "z3",
    "wasmtime",
    "psycopg2",
    "pgvector.*",
    "neo4j",
    "openai",
    "grpc",
    "src.generated.*",
]
ignore_missing_imports = true
